  - AI will now evaluate what the assumption of debt will actually do to its interest rate
  - Removed obsolete AI strategies that were causing the AI not to use PP for diplo actions
  - AI should no longer spam you with overlord subsidies if you've declined
  - The AI should be less likely to take debt if they are at 80% of GDP-Debt Ratio

 Balance:
  - Reduced the taxing religious institutions income a little bit
  - Reduced the frequency of the "Labour Unions Protest Migration"
  - Clamp the "Religious Group Request in Government" pp to a maximum of 500
  - Reduced some buffs from Iran's nuclear tree
  - Reduced amount opinion lost from doing raids
  - Reduced the amount of tension generated from multiples sources and slightly increased decay so small scale wars do not instantly rocket the world tension
  - Removed the Surrender Limit from the nuclear ideas for the time being
  - "Assume Debt" now requires the target nation to not have more than double your GDP
  - Increased lethality of SAMs by ~15% and reduced IC cost for ~10%
  - Reduced the opinion required for the Chinese focuses to make it easier to do focuses
  - Slightly reduced the amount of workers required for civilian factories from 360 to 345k
  - Rebalanced the "Military Advisors" traits so they now increase command power instead of reducing it

 Bugfix:
  - Fixed the Automatic Debt Repayment forcing you into the negatives
  - Fixed the configurable UI display for resources and tax cost factor breaking
  - Fixed an issue that caused crashing if you hovered over 2 Syrian focuses
  - Fixed an issue with localization for the Iranian nuclear tree if the U.S. does not exist
  - Augmented Vision techs now correctly show after copmleting their special project
  - Fixed the missing icon for High Efficiency Engines doctrine
  - Fixed tank guns requiring heavy tank turret to be always mounted
  - Fixed the Space Program special projects not being researchable due to needing a DLC tech