@@ -1591,6 +1591,23 @@ ideas = {
 				custom_modifier_tooltip = USA_iraq_war_cost_TT
 			}
 		}
+
+		# F-35 Event
+		USA_f35_program = {
+			on_add = { log = "[GetDateText]: [Root.GetName]: add idea USA_f35_program" }
+			picture = air_bonus
+
+			allowed = {
+				original_tag = USA
+			}
+
+			equipment_bonus = {
+				medium_plane_airframe = {
+					build_cost_ic = -0.1
+				   instant = yes
+				}
+			}
+		}
 	}
 
 	hidden_ideas = {
