@@ -263,6 +263,7 @@ trigger_year_2001_events = {
 		country_event = { id = USA_unrest_event.4 days = 1 random_days = 365 } #Grass Root Nationalist Movements
 		country_event = { id = USA_econ_event.50 days = 1 random_days = 828 } #Mass Media Event
 		country_event = { id = usa.999 days = 20 } #Election (AI Only)
+		country_event = { id = usa.80 days = 1 random_days = 365 } # F-35 Program Event
 	}
 	POL = {
 		country_event = { id = poland.11 days = 200 random_days = 30 }
