@@ -17848,6 +17848,75 @@ news_event = {
 	}
 }
 
+country_event = {
+	id = usa.80
+	title = usa.80.t
+	desc = usa.80.d
+	picture = GFX_f_plane_usa
+
+	is_triggered_only = yes
+
+	trigger = {
+		tag = USA
+		NOT = { has_country_flag = collapsed_nation }
+	}
+
+	#Good Idea!
+	option = {
+		name = usa.80.o1
+		log = "[GetDateText]: [This.GetName]: usa.80.o1 executed"
+		create_equipment_variant = { # Med Multi-Role
+			name = "F-35 Lightning II"
+			type = medium_plane_airframe_3
+			parent_version = 1
+			modules = {
+				fixed_main_weapon_slot = weap_int_mp_med_hardpoint_2
+				fixed_gun_slot = weap_multi_gun_3
+				engine_type_slot = engine_jet_double_3
+				avionics_type_slot = avionics_manned_3
+				wingform_type_slot = wing_diamond
+				special_slot_type_1 = spec_countermeasures_2
+				special_slot_type_2 = spec_stealthmats_1
+				special_slot_type_3 = spec_stealthshape_1
+				special_slot_type_4 = spec_refuel_3
+				fixed_auxiliary_weapon_slot_1 = weap_int_a2a_hardpoint_1
+				fixed_auxiliary_weapon_slot_2 = weap_int_mp_med_hardpoint_2
+			}
+			upgrades = {
+				plane_bba_radar_upgrade = 5
+				plane_bba_engine_upgrade = 2
+			}
+			icon = "gfx/interface/technologies/USA/AIR/MR5.dds"
+			model = "USA_MR_Fighter4_entity"
+			design_team = mio:USA_lockheed_martin_aircraft_manufacturer
+		}
+		newline = yes
+		set_temp_variable = { temp_opinion = 5 }
+		change_defense_industry_opinion = yes
+		newline = yes
+		add_timed_idea = {
+			idea = USA_f35_program
+			days = 3652
+		}
+		newline = yes
+		set_temp_variable = { treasury_change = gdp_total }
+		multiply_temp_variable = { treasury_change = -0.08 }
+		modify_treasury_effect = yes
+		ai_chance = {
+			base = 1
+		}
+	}
+	#Forget It
+	option = {
+		name = usa.80.o2
+		log = "[GetDateText]: [This.GetName]: usa.80.o2 executed"
+
+		ai_chance = {
+			base = 0
+		}
+	}
+}
+
 # This is for the AI game rule
 country_event = {
 	id = usa.999
