@@ -2047,6 +2047,8 @@
  ##############
  ### Ideas ####
  ##############
+ USA_f35_program: "Domestic F-35 Program"
+ USA_f35_program_desc: "We have began funding the F-35 program in order to make it our primary multi-role fighter for the foreseeable future."
  USA_iraq_war_cost: "The Iraq War"
  USA_iraq_war_cost_desc: "The Iraq War has rocked with relative failure. Our efforts to continue the war will now cost us a considerable amount of money for some time, as we must scrap together money for the equipment and manpower required."
  petro_dollar: "The Petro Dollar"
@@ -2475,6 +2477,13 @@
  usa.64.d: "North Korea has been a hot topic in the House and Senate as of late. They are throwing many things out pertaining to the isolationaist state. Republicans and Democrats alike are denouncing the country. [NKO.GetLeader] and the policies he has instuited. The Communist Party of North Korea, of course, denouce the claims they have done anything wrong.\n\nRegardless, the question of reestablishing ties with the country is being questioned in the Senate this next week. Do we endorse this course of action?\n"
  usa.64.o1: "Good Idea!"
  usa.64.o2: "Forget it, Kimmy is mean"
+
+
+ # F35 Program
+ usa.80.t: "The Multi-Role of Tomorrow, The F-35"
+ usa.80.d: "After years of collaboration, innovation, and design, engineers at Lockheed Martin, along with their partners Northrop Grumman and BAE Systems, have finally unveiled a new fifth-generation multi-role fighter: the F-35 Lightning II. It is said to be the most advanced fifth-generation multi-role fighter to date, allowing our military to leap decades ahead of any competitors. However, there is much debate about whether the program will be worth it, as some argue that by the time production begins, an even better design may already have been developed."
+ usa.80.o1: "Fund the program"
+ usa.80.o2: "We can make better planes"
 
  #USA Events - News
  usa_news.18.t: "USS Cole Bombing"
