@@ -16,6 +16,7 @@ v1.11.1
   - Removed obsolete AI strategies that were causing the AI not to use PP for diplo actions
   - AI should no longer spam you with overlord subsidies if you've declined
   - The AI should be less likely to take debt if they are at 80% of GDP-Debt Ratio
+  - Raid AI has been reworked entirely
 
  Balance:
   - Reduced the taxing religious institutions income a little bit
@@ -30,6 +31,8 @@ v1.11.1
   - Reduced the opinion required for the Chinese focuses to make it easier to do focuses
   - Slightly reduced the amount of workers required for civilian factories from 360 to 345k
   - Rebalanced the "Military Advisors" traits so they now increase command power instead of reducing it
+  - Increased raid success rates slightly
+  - AI will now retaliate properly when raided (if it chooses to retaliate, you will be warned)
 
  Bugfix:
   - Fixed the Automatic Debt Repayment forcing you into the negatives
@@ -54,14 +57,21 @@ v1.11.1
   - Fix Bengkulu & Jambi not appearing in the terrain picture section
   - Fixed the German focus tree being soft locked due to "Nuclear Power" idea being referenced rather than Nuclear Energy
   - Fixed the AI causing a hard crash each time it tried to research "Space Weapons" special project
+  - Fixed missiles not being consumed when launching nukes
+  - Fixed Missile Silo raids not being available for players
+  - Fixed Special Forces raids not correctly displaying damage
 
  Content:
-  - Added focus shortcuts for Brazil, Venezuela
+  - New/Improved Focus Trees: Israel, Brazil
+  - Added focus shortcuts for Brazil, Venezuela, Israel
   - Added several new Internal Faction Events
   - Added an option to not condemn raids if you aren't the one being attacked (before you always lost opinion)
   - Made the Great Man-Made River for Libya into a special project
   - National Space Program for Botswana now adds a civilian facility and gives a boost to Space Program special project
   - Expanded Brazilian content and reworked some older mechanics to new standards
+  - Added a flavor event for the U.S. F-35 program
+  - Added several new events for raids
+  - Added levels of severity to raid damage on resource strikes, higher success will lead to harsher effects
 
  Database:
   - Added "Nuclear Energy" to all of the nations who have nuclear reactors
@@ -88,6 +98,7 @@ v1.11.1
   - Improved the localization of the "Serbia Asks for Investments" event
   - Added displays to some Italian and Venezuelan focuses which just added reactor material without notifying the player
   - Fixed the Spanish opinion changes no longer appearing as they should
+  - Adjusted raid localization so that it correctly identifies who attacked who
 
  Special Projects:
   - Super Heavy Tank Turrets are now locked behind both "Large Gun Tech" & 4th Generation Tank Hulls
